Updated New Year page with hidden message CSS fix

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@ p { line-height: 1.6; }
 .secret-message {
   display: none;
   margin-top: 15px;
-  font-size: 1.3em;
+  font-size: 1.2em;
   color: #ffdde1;
-  animation: fadeIn 1s ease;
+  text-align: center;
+  line-height: 1.4;
+  word-wrap: break-word;
 }
 
 /* Fireworks */
@@ -143,7 +145,7 @@ canvas {
   <div class="secret-btn" onclick="revealMessage()">tap gently ✨</div>
   <div class="secret-message" id="secretMsg">
     If the next year gives me one wish…<br>
-    it’s to keep you in my world ❤️
+    it’s to keep you in my world 💞
   </div>
 </div>
 
