Updated Name of the Sender

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ canvas {
     but I know I’m grateful you exist in mine.
   </p>
 
-  <p style="margin-top:15px;">— <b id="yourName">Mounesh</b></p>
+  <p style="margin-top:15px;">— <b id="yourName">🐒</b></p>
 
   <!-- Surprise #3 -->
   <div class="secret-btn" onclick="revealMessage()">tap gently ✨</div>
