--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ canvas {
 
   <!-- Surprise #1 -->
   <h1>Hello 2026</h1>
-  <h2>but more importantly… Happy New Year <span id="herName">Dummmmu</span> 🫠</h2>
+  <h2>but more importantly… Happiest New Year <span id="herName">Dummmmu</span> 🫠</h2>
   <p>
    May this year be gentle, honest,
    and lovely as you are 😍.
