--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@ h1 { font-size: 2.2em; }
 h2 { font-weight: 300; }
 p { line-height: 1.6; }
 
+.timestamp {
+  margin-top: 25px;
+  font-size: 0.75em;
+  opacity: 0.4;
+  animation: fadeIn 3s ease;
+}
+
+#herName {
+  font-weight: 600;
+  color: #fff;
+  text-shadow: 0 0 6px rgba(255,255,255,0.6),
+               0 0 12px rgba(255,180,200,0.6);
+}
 .heart {
   font-size: 3em;
   animation: beat 1.2s infinite;
@@ -96,15 +109,29 @@ p { line-height: 1.6; }
   white-space: normal;        /* override any no-wrap issues */
 }
 
+
 /* Fireworks */
 canvas {
   position: fixed;
+  Pointer-events: none;
   top: 0;
   left: 0;
   z-index: 1;
 }
 
 /* Animations */
+.floating-heart {
+  position: fixed;
+  bottom: -30px;
+  font-size: 18px;
+  opacity: 0.25;
+  animation: floatUp 10s linear infinite;
+  z-index: 0;
+}
+@keyframes floatUp {
+  from { transform: translateY(0); }
+  to { transform: translateY(-120vh); }
+}
 @keyframes beat {
   0%,100% { transform: scale(1); }
   50% { transform: scale(1.3); }
@@ -142,7 +169,7 @@ canvas {
   <h2>but more importantly… Happiest New Year <span id="herName">Dummmmu</span> 🫠</h2>
   <p>
    May this year be gentle, honest,
-   and lovely as you are 😍.
+   and as lovely as you are 😍.
   </p>
   <!-- Photo Slideshow -->
   <div class="slideshow">
@@ -173,6 +200,7 @@ canvas {
     If the next year gives me one wish…<br>
     it’s to keep you in my world 💞
   </div>
+  <p class="timestamp">31 • 12 • 2025</p>
 </div>
 
 <script>
@@ -214,6 +242,11 @@ const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
+window.addEventListener("resize", () => {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+});
+
 let fireworks = [];
 
 function Firework() {
@@ -243,6 +276,16 @@ function animate() {
 }
 
 for (let i=0;i<60;i++) fireworks.push(new Firework());
+setInterval(() => {
+  const heart = document.createElement("div");
+  heart.className = "floating-heart";
+  heart.textContent = "🤍";
+  heart.style.left = Math.random() * 100 + "vw";
+  document.body.appendChild(heart);
+
+  setTimeout(() => heart.remove(), 10000);
+}, 4500);
+
 animate();
 </script>
 
