Changed emoji colour

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ for (let i=0;i<60;i++) fireworks.push(new Firework());
 setInterval(() => {
   const heart = document.createElement("div");
   heart.className = "floating-heart";
-  heart.textContent = "🤍";
+  heart.textContent = "🩷";
   heart.style.left = Math.random() * 100 + "vw";
   document.body.appendChild(heart);
 
